Application Gateway/Redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-redirect
  namespace: default
  annotations:
    ingressClassName: azure-application-gateway 
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/use-private-ip: "false"
spec:
  tls:
  - hosts:
    - demo-app.local
    secretName: demo-app-tls-secret
  rules:
  - host: demo-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app-service
            port:
              number: 80
