Application Gateway/https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-https
  namespace: default
  annotations:
    ingressClassName: azure-application-gateway 
    appgw.ingress.kubernetes.io/use-private-ip: "false"
spec:
  tls:
  - secretName: demo-app-tls-secret
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-app-service
            port:
              number: 80
