Application Gateway/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-tls
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-http
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: azure-application-gateway
  tls:
    - hosts:
        - testing1.aidevops.in
      secretName: demo-app-tls-secret
  rules:
    - host: testing1.aidevops.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app-service
                port:
                  number: 80
